Implement spacial handling of transfer functions during Gray to CMYK conversion: ignore transfer functions for non-black components. Bug 688360.

DETAILS:
On this topic, section 7.3 of PRLM-3rd (page 494) says:
"Note: When the current color space is DeviceGray and the output device's
native color space is DeviceCMYK, the interpreter uses only the gray transfer
function. ... This special case exists for compatibility with existing
applications." There is a similar comment in section 6.3 of the PDF 1.6
spec. (page 456).

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8666 a1074d23-0009-0410-80fe-cf8c14f379e6