gs/src/gxcmap.c
@@ -851,11 +851,25 @@ cmap_gray_halftoned(frac gray, gx_device_color * pdc,
         for (i = 0; i < ncomps; i++)
             cm_comps[i] = gx_map_color_frac(pis,
 	    			cm_comps[i], effective_transfer[i]);
-    else
-        for (i = 0; i < ncomps; i++)
-            cm_comps[i] = frac_1 - gx_map_color_frac(pis,
-	    		(frac)(frac_1 - cm_comps[i]), effective_transfer[i]);
+    else {
+        if (dev->color_info.opmode == GX_CINFO_OPMODE_UNKNOWN)
+            check_cmyk_color_model_comps(dev);  
+        if (dev->color_info.opmode == GX_CINFO_OPMODE) {  /* CMYK-like color space */
+            int k = dev->color_info.black_component;
 
+            for (i = 0; i < ncomps; i++) {
+                if (i == k)
+                    cm_comps[i] = frac_1 - gx_map_color_frac(pis,
+	    		(frac)(frac_1 - cm_comps[i]), effective_transfer[i]);
+                 else
+                    cm_comps[i] = cm_comps[i]; /* Ignore transfer, see PLRM3 p. 494 */
+            }
+        } else {
+            for (i = 0; i < ncomps; i++)
+                cm_comps[i] = frac_1 - gx_map_color_frac(pis,
+	    		    (frac)(frac_1 - cm_comps[i]), effective_transfer[i]);
+        }
+    }
     if (gx_render_device_DeviceN(cm_comps, pdc, dev, pis->dev_ht,
 	    				&pis->screen_phase[select]) == 1)
 	gx_color_load_select(pdc, pis, dev, select);
@@ -878,11 +892,25 @@ cmap_gray_direct(frac gray, gx_device_color * pdc, const gs_imager_state * pis,
         for (i = 0; i < ncomps; i++)
             cv[i] = frac2cv(gx_map_color_frac(pis,
 	    			cm_comps[i], effective_transfer[i]));
-    else
-        for (i = 0; i < ncomps; i++)
-            cv[i] = frac2cv(frac_1 - gx_map_color_frac(pis,
-	    		(frac)(frac_1 - cm_comps[i]), effective_transfer[i]));
+    else {
+        if (dev->color_info.opmode == GX_CINFO_OPMODE_UNKNOWN)
+            check_cmyk_color_model_comps(dev);  
+        if (dev->color_info.opmode == GX_CINFO_OPMODE) {  /* CMYK-like color space */
+            int k = dev->color_info.black_component;
 
+            for (i = 0; i < ncomps; i++) {
+                if (i == k)
+                    cv[i] = frac2cv(frac_1 - gx_map_color_frac(pis,
+	    		(frac)(frac_1 - cm_comps[i]), effective_transfer[i]));
+                else
+                    cv[i] = frac2cv(cm_comps[i]); /* Ignore transfer, see PLRM3 p. 494 */
+            }
+        } else {
+            for (i = 0; i < ncomps; i++)
+                cv[i] = frac2cv(frac_1 - gx_map_color_frac(pis,
+	    		    (frac)(frac_1 - cm_comps[i]), effective_transfer[i]));
+        }
+    }
     /* encode as a color index */
     color = dev_proc(dev, encode_color)(dev, cv);
 
